New structure, Work it harder, make it better Do it faster, makes us stronger

--- a/libui/Makefile
+++ b/libui/Makefile
@@ -6,7 +6,7 @@
 #    By: kmira <kmira@student.42.fr>                +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2019/02/12 11:40:08 by kmira             #+#    #+#              #
-#    Updated: 2019/09/12 22:18:57 by kmira            ###   ########.fr        #
+#    Updated: 2019/09/14 01:05:23 by kmira            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -24,21 +24,19 @@ INCLUDES =	-I libft \
 LIBRARY = libft/libft.a
 
 FILES	=	\
-			assets \
-			bar_below \
-			bar_right \
-			bar_top \
-			border \
-			common_functions \
-			init_font \
-			initialize \
+			bar \
+			draw \
+			element \
+			font \
+			get_size \
 			load \
-			render_texture \
-			text \
+			main_window \
+			move \
+			render \
 
 
-SRCS	= $(addsuffix .c, $(addprefix ft_, $(FILES)))
-OBJ		= $(addsuffix .o, $(addprefix ft_, $(FILES)))
+SRCS	= $(addsuffix .c, $(FILES))
+OBJ		= $(addsuffix .o, $(FILES))
 
 .PHONY: clean fclean all re
 
