--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,11 @@
 {
 	"files.exclude": {
 		"*/*.o": true
+	},
+	"files.associations": {
+		"array": "c",
+		"string_view": "c",
+		"string": "c",
+		"vector": "c"
 	}
 }
