--- a/libui/Makefile
+++ b/libui/Makefile
@@ -6,7 +6,7 @@
 #    By: kmira <kmira@student.42.fr>                +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2019/02/12 11:40:08 by kmira             #+#    #+#              #
-#    Updated: 2019/09/15 01:04:01 by kmira            ###   ########.fr        #
+#    Updated: 2019/09/17 01:03:41 by kmira            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -34,6 +34,7 @@ FILES	=	\
 			main_window \
 			move \
 			render \
+			set_state \
 			text \
 			tree_functions \
 
